Changelog
=========

11.4 - (unreleased)
-------------------
* Change: clear floats for daviz-settings
  [ichim-david refs #91590]

11.3 - (2018-03-14)
-------------------
* Change: call js code within jQuery dom ready allowing for deferred js loading
  [ichim-david refs #91577]

11.2 - (2017-12-12)
-------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

11.1 - (2017-11-07)
-------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

11.0 - (2017-05-22)
-------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

10.9 - (2017-05-15)
-------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

10.8 - (2017-05-02)
-------------------
* Cleanup: Remove older broken upgrade steps (< 5.0)
  [avoinea]

10.7 - (2017-04-24)
-------------------
* Change: updated package information
  [eduard-fironda]

10.6 - (2017-01-17)
-------------------
* Bug fix: Add extra_require for zope2 only deployments
  [avoinea]

10.5 - (2016-12-28)
-------------------
* Change: Make UnicodeDecodeError more verbose
  [voineali refs #79895]

10.4 - (2016-10-31)
-------------------
* Change: manage_beforeDelete now safely checks for request
  [ichim-david refs #75296]

10.3 - (2016-05-19)
-------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

10.2 - (2016-05-04)
-------------------
* Feature: html body field for daviz and gis application
  - added new field "body"
  - modified the view template
  [chiridra refs #70146]

10.1 - (2016-03-14)
-------------------
* Bug fix: fixed provenances field when using eea.daviz in non
  eea environment
  [ichimdav]
* Bugfix: Fixed order of column labels when labels are numbers
  [szabozo0 refs #69360]

10.0 - (2016-03-01)
-------------------
* Change: Data provenance is no longer required except for publishing
  [ichimdav refs #68228]

9.9 - (2016-02-15)
------------------